# hyperpocket

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.html  README.md  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  response.json  search.html  searchindex.js
docs/hyperpocket/: Makefile  README.md  conf.py  index.rst  pyproject.toml  requirements.txt
docs/hyperpocket/_build/doctrees/: README.doctree  environment.pickle  index.doctree  overview.doctree
docs/hyperpocket/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/hyperpocket/_templates/autoapi/: index.rst
docs/hyperpocket/auth/: create_auth_provider.md  enabling-oauth-with-hyperpocket.md  enabling-token-based-authentication-with-hyperpocket.md  hyperpocket-auth.md  index.rst  supported-auth-flows.md  supported-auth-list.md
docs/hyperpocket/contribute/: contribute-to-hyperpocket.md  index.rst
docs/hyperpocket/introduction/: index.rst  overview.md  quickstart.md
docs/hyperpocket/managed/: conceptual_guide.md  create_auth_provider.md  getting_started.md  quick_start.md
docs/hyperpocket/supported-frameworks/: CrewAI  anthropic.md  crewai.md  gemini.md  index.rst  langchain.md  langgraph.md  llamaindex.md  openai.md
docs/hyperpocket/tools/: apply-function-tools.md  apply-local-tools.md  index.rst  integration-from-github.md  tool-interfaces.md  under-the-hood.md  using-function-tools.md  using-git-tools.md  using-sandboxed-tools.md  using-wasm-tools.md  what-are-tools.md
examples/anthropic/tool-calling-agent/: pyproject.toml  requirements.txt
examples/anthropic/tool-calling-agent/tool_calling_agent/: agent.py
examples/crewai/gmail_summarizer/: README.md  pyproject.toml
examples/crewai/kraken-auto-trader/: README.md  hello.py  pyproject.toml
examples/crewai/schedule-summarizer/: .gitignore  README.md  pyproject.toml
examples/demo/hyperpocket-demo/: README.md  anthropic-agent.py  langchain-agent.py  langgraph-agent.py  llamaindex-agent.py  openai-agent-reddit.py  openai-agent.py  prettyprint.py  pyproject.toml
examples/gemini/tool-calling-agent/: pyproject.toml
examples/gemini/tool-calling-agent/tool_calling_agent/: agent.py
examples/langchain/cloudflare-tool-calling-agent/: pyproject.toml
examples/langchain/cloudflare-tool-calling-agent/tool_calling_agent/: agent.py
examples/langchain/control-mouse/: main.py  pyproject.toml
examples/langchain/hyperdock-llamaindex-tool-calling-agent/: agent.py  pyproject.toml
examples/langchain/langchain-community-tool/: pyproject.toml
examples/langchain/langchain-community-tool/langchain_community_tool/: agent.py
examples/langchain/langchain-gemini/: pyproject.toml
examples/langchain/langchain-gemini/langchain_gemini/: agent.py
examples/langchain/mistral-example/: main.py  pyproject.toml
examples/langchain/slack-bot-agent/: pyproject.toml
examples/langchain/slack-bot-agent/slack_bot_agent/: main.py
examples/langchain/tool-calling-agent/: agent.py  agent_inject.py  pyproject.toml  simple_function_tool.py
examples/langchain/tool-calling-agent/tool_calling_agent/: agent.py
examples/langchain/vessl-llm-finetuning-agent/: pyproject.toml
examples/langchain/vessl-llm-finetuning-agent/vessl_llm_finetuning_agent/: agent.py  util.py
examples/langchain/weaviate-query-agent/: README.md  agent_inject.py  pyproject.toml
examples/langchain/weaviate-query-agent/weaviate_query_agent/: agent.py
examples/langgraph/slack-schedule-management-agent/: pyproject.toml  requirements.txt  server.py
examples/langgraph/slack-schedule-management-agent/slack_schedule_management_agent/: __init__.py  local_tools.py  server.py
examples/langgraph/tool-calling-agent/: client.py  pyproject.toml  requirements.txt  server.py
examples/langgraph/tool-calling-agent/tool_calling_agent/: server.py
examples/llamadeploy/tool-calling-agent/: README.md  control_plane.py  deploy_core.py  pyproject.toml  workflow_deployment.yaml
examples/llamadeploy/tool-calling-agent/workflows/: __init__.py  workflow_duckduckgo.py  workflow_yahoo_finance.py
examples/llamaindex/file-explorer-agent/: pyproject.toml
examples/llamaindex/file-explorer-agent/file_explorer_agent/: agent.py
examples/llamaindex/tool-calling-agent/: agent.py  pyproject.toml  requirements.txt
examples/llamaindex/tool-calling-agent/tool_calling_agent/: agent.py
examples/openai-agents/tool-calling-agent/: pyproject.toml
examples/openai-agents/tool-calling-agent/tool_calling_agent/: agent.py  util.py
examples/openai/dynamic-tool-call/: pyproject.toml  requirements.txt
examples/openai/dynamic-tool-call/dynamic_tool_call/: agent.py
examples/openai/dynamic-tool-loading/: .gitignore  README.md  main.py  pyproject.toml  settings.toml
examples/openai/dynamic-tool-loading/template/: code_template.py
examples/openai/dynamic-tool-loading/utils/: build_javascript_tool.py  build_python_tool.py  bulls_and_cows.py  upload_to_repo.py
examples/openai/openai-agents-example/: README.md  pyproject.toml
examples/openai/openai-agents-example/openai_agents_example/: main.py
examples/openai/personal-email-summarizer/: README.md  main.py  pyproject.toml
examples/openai/personal-email-summarizer/personal_email_summarizer/: main.py
examples/photo-taking-agent/: .gitignore  README.md  main.py  pyproject.toml  tools.py
examples/photo-taking-agent/template/: code_template.py
examples/photo-taking-agent/utils/: build_javascript_tool.py  build_python_tool.py  remove_remote_repo.py
libs/hyperpocket/: README.md  pyproject.toml
libs/hyperpocket/hyperpocket/: __init__.py  builtin.py  pocket_auth.py  pocket_core.py  pocket_main.py  prompts.py  tool_like.py
libs/hyperpocket/hyperpocket/auth/: README.KR.md  README.md  __init__.py  context.py  handler.py  provider.py  schema.py
libs/hyperpocket/hyperpocket/cli/: __main__.py  auth.py  auth_oauth2.py  auth_token.py  eject.py  pull.py  (+4 more)
libs/hyperpocket/tests/: test_pocket.py  test_pocket_auth.py  test_pocket_core.py
(+3380 files in other folders)
