[project]
name = "hyperpocket-root"
version = "0.0.1"
description = ""
authors = [{ name = "moon", email = "moon@vessl.ai" }]
requires-python = ">=3.10"
readme = "README.md"

[dependency-groups]
dev = [
    "ruff>=0.8.6",
    "pytest>=8.3.4",
    "hyperpocket-langchain",
    "hyperpocket-langgraph",
    "hyperpocket-openai",
    "hyperpocket-anthropic",
    "hyperpocket-llamaindex",
    "hyperpocket",
]

[tool.uv.sources]
hyperpocket-langchain = { path = "libs/extensions/langchain" }
hyperpocket-langgraph = { path = "libs/extensions/langgraph" }
hyperpocket-openai = { path = "libs/extensions/openai" }
hyperpocket-anthropic = { path = "libs/extensions/anthropic" }
hyperpocket-llamaindex = { path = "libs/extensions/llamaindex" }
hyperpocket = { path = "libs/hyperpocket" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors, 
    "F", # pyflakes errors, 
    "I", # isort errors,
]
ignore = [
    "E501", # line too long, handled by formatting
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
