[project]
name = "hyperpocket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
    "sphinx-autoapi==3.4.0",
    "sphinx-autodoc-typehints==2.5.0",
    "sphinx-mdinclude==0.6.2",
    "sphinx-rtd-theme==3.0.2",
]
