[tool.poetry]
name = "hyperpocket"
version = "0.0.3"
description = "Building AI agent with hyperpocket tool in a flash"
authors = ["VESSL AI Devs <dev@vessl.ai>"]
readme = "README.md"
repository = "https://github.com/vessl-ai/hyperpocket"
homepage = "https://vessl-ai.github.io/hyperpocket"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
click = "^8.1.7"


requests = "^2.32.3"
httpx = "0.27"
toml = "^0.10.2"
jinja2 = "^3.1.4"
playwright = "^1.49.0"
pygithub = "^2.5.0"
python-multipart = "^0.0.19"
multiprocess = "^0.70.17"
gitpython = "^3.1.43"
redis = "^5.2.1"
dynaconf = "^3.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
hyperpocket = "hyperpocket.cli.__main__:cli"
