[project]
name = "hyperpocket"
version = "0.3.4"
description = "Building AI agent with hyperpocket tool in a flash"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.2",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "click>=8.1.7",
    "requests>=2.32.3",
    "httpx==0.27",
    "toml>=0.10.2",
    "jinja2>=3.1.4",
    "playwright>=1.49.0",
    "pygithub>=2.5.0",
    "python-multipart>=0.0.19",
    "multiprocess>=0.70.17",
    "gitpython>=3.1.43",
    "redis>=5.2.1",
    "dynaconf>=3.2.6",
]

[project.urls]
Homepage = "https://vessl-ai.github.io/hyperpocket"
Repository = "https://github.com/vessl-ai/hyperpocket"

[project.scripts]
hyperpocket = "hyperpocket.cli.__main__:cli"

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.8.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
extend = "../../.ruff.toml"
