[project]
name = "tool-calling-agent"
version = "0.0.1"
description = "Tool calling agent with hyperpocket and Anthropic API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperpocket>=0.0.3",
    "hyperpocket_anthropic>=0.0.3",
    "anthropic>=0.43.1",
]

[tool.uv.sources]
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket_anthropic = { path = "../../../libs/extensions/anthropic", editable = true }
