[project]
name = "tool-calling-agent"
version = "0.0.1"
description = "Tool calling agent with hyperpocket and Anthropic API"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.43.1",
    "hyperpocket-anthropic",
]

[tool.uv.sources]
hyperpocket-anthropic = { path = "../../../libs/extensions/anthropic", editable = true }
