[project]
name = "gmail_summarizer"
version = "0.1.0"
description = "gmail-summarizer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "hyperpocket-crewai>=0.4.5",
    "hyperpocket[standard]>=0.4.5",
]

[project.scripts]
gmail_summarizer = "gmail_summarizer.main:run"
run_crew = "gmail_summarizer.main:run"
train = "gmail_summarizer.main:train"
replay = "gmail_summarizer.main:replay"
test = "gmail_summarizer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
