[project]
name = "kraken_auto_trader"
version = "0.1.0"
description = "kraken-auto-trader using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "hyperdock-container",
    "hyperpocket-crewai",
]

[project.scripts]
kraken_auto_trader = "kraken_auto_trader.main:run"
run_crew = "kraken_auto_trader.main:run"
train = "kraken_auto_trader.main:train"
replay = "kraken_auto_trader.main:replay"
test = "kraken_auto_trader.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.sources]
hyperpocket-crewai = { path = "../../../libs/extensions/crewai", editable = true }
hyperdock-container = { path = "../../../libs/docks/hyperdock-container", editable = true }
