[project]
name = "tool-calling-agent"
version = "0.1.0"
description = "Tool calling agent with hyperpocket and Gemini API"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "hyperpocket_gemini>=0.0.3",
]

[tool.uv.sources]
hyperpocket_gemini = { path = "../../../libs/extensions/gemini", editable = true }
