[project]
name = "mistral-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperpocket",
    "hyperpocket-langchain",
    "langchain>=0.3.15",
    "langchain-mistralai>=0.2.4",
]

[tool.uv.sources]
hyperpocket-langchain = { path = "../../../libs/extensions/langchain", editable = true }
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
