[project]
name = "langchain-workflow-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "langchain-community>=0.3.12",
    "langchain-core>=0.3.25",
    "langchain-openai>=0.2.12",
    "pocket-langchain",
    "slack-sdk>=3.34.0",
    "uvicorn>=0.32.1",
]

[tool.uv.sources]
pocket-langchain = { path = "../../libs/pocket_langchain" }
