[project]
name = "slack-bot-agent"
version = "0.0.1"
description = "Slack bot agent with hyperpocket and Langchain"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "langchain-community>=0.3.12",
    "langchain-core>=0.3.25",
    "langchain-openai>=0.2.12",
    "hyperpocket",
    "hyperpocket_langchain",
    "slack-sdk>=3.34.0",
    "uvicorn>=0.32.1",
]

[tool.uv.sources]
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket_langchain = { path = "../../../libs/extensions/langchain", editable = true }
