[project]
name = "tool-calling-agent"
version = "0.0.1"
description = "Tool calling agent with hyperpocket and Langchain"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperdock-container",
    "hyperpocket",
    "hyperpocket-langchain",
    "langchain>=0.3.15",
    "langchain-openai>=0.3.1",
]

[tool.uv.sources]
hyperdock-container = { path = "../../../libs/docks/hyperdock-container", editable = true }
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket-langchain = { path = "../../../libs/extensions/langchain", editable = true }
