[project]
name = "tool-calling-agent"
version = "0.0.1"
description = "Tool calling agent with hyperpocket and Langgraph"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.27.0",
    "hyperpocket>=0.0.3",
    "hyperpocket_langgraph>=0.0.3",
    "langchain-openai>=0.3.1",
    "langgraph>=0.2.65",
    "pydantic>=2.10.5",
    "starlette>=0.41.3",
    "uvicorn>=0.34.0",
]

[project.scripts]
run_server = "tool_calling_agent.server:main"
run_client = "tool_calling_agent.client:client_example"

[tool.uv]
package = true

[tool.uv.sources]
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket_langgraph = { path = "../../../libs/extensions/langgraph", editable = true }
