[project]
name = "tool-calling-agent"
version = "0.0.1"
description = "Tool calling agent with hyperpocket and LlamaIndex"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["hyperpocket>=0.0.3", "hyperpocket_llamaindex>=0.0.3"]

[tool.uv.sources]
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket_llamaindex = { path = "../../../libs/extensions/llamaindex", editable = true }
