[project]
name = "tool-calling-agent"
version = "0.0.1"
description = "Tool calling agent with hyperpocket and LlamaIndex"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperdock-container",
    "hyperpocket-llamaindex",
]

[tool.uv.sources]
hyperpocket-llamaindex = { path = "../../../libs/extensions/llamaindex", editable = true }
hyperdock-container = { path = "../../../libs/docks/hyperdock-container", editable = true }
