[project]
name = "tool-calling-agent"
version = "0.0.1"
description = "Tool calling agent with hyperpocket with OpenAI Agent"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperdock-container",
    "hyperpocket>=0.0.3",
    "hyperpocket_openai>=0.0.3",
    "openai-agents>=0.0.2",
]

[tool.uv.sources]
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket_openai = { path = "../../../libs/extensions/openai", editable = true }
hyperdock-container = { path = "../../../libs/docks/hyperdock-container", editable = true }
