[project]
name = "dynamic-tool-call"
version = "0.0.1"
description = "Tool calling agent with hyperpocket and OpenAI API"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperdock-container",
    "hyperpocket>=0.0.3",
    "hyperpocket_openai>=0.0.3",
]

[tool.uv.sources]
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket_openai = { path = "../../../libs/extensions/openai", editable = true }
hyperdock-container = { path = "../../../libs/docks/hyperdock-container", editable = true }
