[project]
name = "openai-agents-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperpocket[standard]",
    "hyperpocket-openai",
    "openai-agents>=0.0.3",
]

[tool.uv.sources]
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket-openai = { path = "../../../libs/extensions/openai", editable = true }
