[project]
name = "personal-email-summarizer"
version = "0.0.1"
description = "Personal email summarizer with hyperpocket and OpenAI API"
authors = [{ name = "Hyperpocket Team", email = "hyperpocket@vessl.ai" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "hyperpocket",
    "hyperpocket-openai",
    "openai>=1.59.3",
    "slack-bolt>=1.22.0",
    "slack-sdk>=3.34.0",
]

[tool.uv.sources]
hyperpocket = { path = "../../../libs/hyperpocket", editable = true }
hyperpocket-openai = { path = "../../../libs/extensions/openai", editable = true }
